modified high score area to prevent underlap on iPHones

--- a/main.css
+++ b/main.css
@@ -477,6 +477,10 @@ color: red;
 	position: fixed;
 	bottom: 3em;
 	left: 1vw;
+	border-style: solid;
+	padding: 0vh 1vw;
+	border-radius: 2vh;
+	border-color: mediumseagreen
 }
 .status{
 	color: deeppink;
